--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -2,17 +2,13 @@ name: Mirror Source Repository
 
 on:
   schedule:
-    - cron: "*/15 * * * *"  # Runs every 15 minutes
+    - cron: '*/15 * * * *'  # Runs every 15 minutes
   workflow_dispatch:         # Allows manual triggering
 
 jobs:
   update_repository:
     runs-on: ubuntu-latest
-
     steps:
-
-      -.
-
       - name: Checkout this repository
         uses: actions/checkout@v3
         with:
@@ -20,7 +16,7 @@ jobs:
 
       - name: Set up Git
         run: |
-          git config config config --global user.name "github-actions[bot]"
+          git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
 
       - name: Get latest commit hash from source repository
@@ -35,8 +31,8 @@ jobs:
         id: get_last_commit
         run: |
           if [ -f .last_source_commit ]; then
-            echo "Last synced commit found."
             LAST_COMMIT=$(cat .last_source_commit)
+            echo "Last synced commit found: $LAST_COM"
             echo "last_commit=$LAST_COM" >> $GITHUB_OUTPUT
           else
             echo "No last synced commit found."
@@ -46,7 +42,7 @@ jobs:
       - name: Decide whether to update
         id: decide_update
         run: |
-          if [ "${{ steps.get_source_commit.outputs.source_commit }}" != "${{ steps( steps.get_last_commit.outputs.last_commit }}" ]; then
+          if [ "${{ steps.get_source_commit.outputs.source_commit }}" != "${{ steps steps.get_last_commit.outputs.last_commit }}" ]; then
             echo "New commit detected. Proceeding to update."
             echo "update_needed=true" >> $GITHUB_ENV
           else
@@ -57,19 +53,10 @@ jobs:
       - name: Update repository with source contents
         if: env.update_needed == 'true'
         run: |
-          # Clone the source repository
           git clone --depth 1 https://github.com/yonasuriv/PanicSonda temp_source
-
-          # Remove existing files (except .git and workflow files)
           find . -maxdepth 1 ! -name '.git' ! -name '.' ! -name '.github' -exec rm -rf {} +
-
-          # Copy copy files from source to root
           cp -a temp_source/. .
-
-          # Remove the cloned source repository directory
           rm -rf temp_source
-
-          # Store the latest source commit hash
           echo "${{ steps.get_source_commit.outputs.source_commit }}" > .last_source_commit
 
       - name: Commit and push changes
