--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -1,4 +1,4 @@
-name: Mirror Source Repository
+name: Update Submodule
 
 on:
   schedule:
@@ -6,59 +6,40 @@ on:
   workflow_dispatch:         # Allows manual triggering
 
 jobs:
-  update_repository:
+  update_submodule:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout this repository
+      - name: Checkout repository with submodules
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
+          submodules: recursive
 
-      - name: Set up Git
+      - name: Set up Git user
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
 
-      - name: Get latest commit hash from source repository
-        id: get_source_commit
+      - name: Update submodules to latest commit
         run: |
-          SOURCE_HASH=$(git ls-remote https://github.com/yonasuriv/PanicSonda.git HEAD | awk '{ print $1 }')
-          echo "::set-output name=source_hash::$SOURCE_HASH"
+          git submodule update --remote --merge
 
-      - name: Get last synced commit hash
-        id: get_last_commit
+      - name: Check for changes
+        id: changes
         run: |
-          if [ -f .last_source_commit ]; then
-            LAST_HASH=$(cat .last_source_commit)
-            echo "::set-output name=last_hash::$LAST_HASH"
+          if [[ -n "$(git status --porcelain)" ]]; then
+            echo "changes_detected=true" >> $GITHUB_ENV
           else
-            echo "::set-output name=last_hash::"
+            echo "changes_detected=false" >> $GITHUB_ENV
           fi
-
-      - name: Decide whether to update
-        id: decide_update
-        run: |
-          if [ "${{ steps.get_source_commit.outputs.source_hash }}" != "${{ steps steps.get_last_commit.outputs.last_hash }}" ]; then
-            echo "update_needed=true" >> $GITHUB_ENV
-          else
-            echo "update_needed=false" >> $GITHUB_ENV
-          fi
-
-      - name: Update repository with source contents
-        if: env.update_needed == 'true'
-        run: |
-          git clone --depth 1 https://github.com/yonasuriv/PanicSonda.git temp_source
-          rsync -a --delete temp_source/ . --exclude '.git' --exclude '.github' --exclude '.last_source_commit'
-          rm -rf temp_source
-          echo "${{ steps.get_source_commit.outputs.source_hash }}" > .last_source_commit
 
       - name: Commit and push changes
-        if: env.update_needed == 'true'
+        if: env.changes_detected == 'true'
         run: |
           git add .
-          git commit -m "Mirror update from source repository"
+          git commit -m "Update submodule(s) to latest commit"
           git push origin HEAD
 
-      - name: No update needed
-        if: env.update_needed == 'false'
-        run: echo "No update needed."
+      - name: No changes detected
+        if: env.changes_detected == 'false'
+        run: echo "No changes to commit."
