--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -5,6 +5,10 @@ on:
     - cron: '*/15 * * * *'  # Runs every 15 minutes
   workflow_dispatch:         # Allows manual triggering
 
+# Grant write permissions to the GITHUB_TOKEN
+permissions:
+  contents: write
+
 jobs:
   update_submodule:
     runs-on: ubuntu-latest
